netlify identity stuff

--- a/src/index.html
+++ b/src/index.html
@@ -2,10 +2,59 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title></title>
+    <title>ssc</title>
+    <!-- include the widget -->
+  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 </head>
 <body>
     <h1>ssc</h1>
+
+    <!-- Add a menu:
+    Log in / Sign up - when the user is not logged in
+    Username / Log out - when the user is logged in
+    -->
+    <div data-netlify-identity-menu></div>
+
+    <!-- Add a simpler button:
+    Simple button that will open the modal.
+    -->
+    <div data-netlify-identity-button>Login with Netlify Identity</div>
+
     <script src="/index.js"></script>
+    <script>
+        // Open the modal
+        netlifyIdentity.open();
+
+        // Get the current user:
+        // Available after on('init') is invoked
+        const user = netlifyIdentity.currentUser();
+
+        // Bind to events
+        netlifyIdentity.on('init', user => console.log('init', user));
+        netlifyIdentity.on('login', user => console.log('login', user));
+        netlifyIdentity.on('logout', () => console.log('Logged out'));
+        netlifyIdentity.on('error', err => console.error('Error', err));
+        netlifyIdentity.on('open', () => console.log('Widget opened'));
+        netlifyIdentity.on('close', () => console.log('Widget closed'));
+
+        // Unbind from events
+        // netlifyIdentity.off('login'); // to unbind all registered handlers
+        // netlifyIdentity.off('login', handler); // to unbind a single handler
+
+        // Close the modal
+        netlifyIdentity.close();
+
+        // Log out the user
+        // netlifyIdentity.logout();
+
+        // Refresh the user's JWT
+        // Call in on('login') handler to ensure token refreshed after it expires (1hr)
+        // Note: this method returns a promise.
+        netlifyIdentity.refresh().then((jwt)=>console.log(jwt))
+
+        // Change language
+        netlifyIdentity.setLocale('en');
+    </script>
 </body>
 </html>
+
