--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@
     <!-- Add a simpler button:
     Simple button that will open the modal.
     -->
-    <div data-netlify-identity-button>Login with Netlify Identity</div>
+    <div data-netlify-identity-button></div>
 
     <script src="/index.js"></script>
     <script>
@@ -28,6 +28,7 @@
         // Get the current user:
         // Available after on('init') is invoked
         const user = netlifyIdentity.currentUser();
+        console.log('user', user)
 
         // Bind to events
         netlifyIdentity.on('init', user => console.log('init', user));
@@ -42,18 +43,19 @@
         // netlifyIdentity.off('login', handler); // to unbind a single handler
 
         // Close the modal
-        netlifyIdentity.close();
+        // netlifyIdentity.close();
 
         // Log out the user
         // netlifyIdentity.logout();
 
         // Refresh the user's JWT
-        // Call in on('login') handler to ensure token refreshed after it expires (1hr)
+        // Call in on('login') handler to ensure token refreshed after it
+        // expires (1hr)
         // Note: this method returns a promise.
-        netlifyIdentity.refresh().then((jwt)=>console.log(jwt))
+        // netlifyIdentity.refresh().then((jwt)=>console.log(jwt))
 
         // Change language
-        netlifyIdentity.setLocale('en');
+        // netlifyIdentity.setLocale('en');
     </script>
 </body>
 </html>
