--- a/src/index.html
+++ b/src/index.html
@@ -23,7 +23,7 @@
     <script src="/index.js"></script>
     <script>
         // Open the modal
-        netlifyIdentity.open();
+        <!-- netlifyIdentity.open(); -->
 
         // Get the current user:
         // Available after on('init') is invoked
