--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>ssc</h1>
 
+    <div id="signup-form">
+        <button type="submit">subscribe</button>
+    </div>
+
     <!-- Add a menu:
     Log in / Sign up - when the user is not logged in
     Username / Log out - when the user is logged in
@@ -23,7 +27,7 @@
     <script src="/index.js"></script>
     <script>
         // Open the modal
-        <!-- netlifyIdentity.open(); -->
+        // netlifyIdentity.open()
 
         // Get the current user:
         // Available after on('init') is invoked
