setting up customer

--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,8 @@
     <h1>ssc</h1>
 
     <div id="signup-form">
+        <h2>signup form</h2>
+        <input type="email" name="email" id="email">
         <button type="submit">subscribe</button>
     </div>
 
