--- a/src/index.html
+++ b/src/index.html
@@ -5,15 +5,25 @@
     <title>ssc</title>
     <!-- include the widget -->
   <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+  <script src="https://js.stripe.com/v3/"></script>
+  <link rel="stylesheet" href="StripeElements.css">
 </head>
+
 <body>
     <h1>ssc</h1>
 
-    <div id="signup-form">
+    <form id="signup-form">
         <h2>signup form</h2>
         <input type="email" name="email" id="email">
+
+        <!-- Elements will create input elements here -->
+        <div id="card-element" class="MyCardElement"></div>
+
+        <!-- We'll put the error messages in this element -->
+        <div id="card-errors" role="alert"></div>
+
         <button type="submit">subscribe</button>
-    </div>
+    </form>
 
     <!-- Add a menu:
     Log in / Sign up - when the user is not logged in
