--- a/src/index.html
+++ b/src/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <title>ssc</title>
+
     <!-- include the widget -->
-  <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
-  <script src="https://js.stripe.com/v3/"></script>
-  <link rel="stylesheet" href="StripeElements.css">
+    <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
+
+    <script src="https://js.stripe.com/v3/"></script>
+    <link rel="stylesheet" href="/style.css">
 </head>
 
 <body>
