--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,7 @@
 
     <form id="signup-form">
         <h2>signup form</h2>
+        <label for="email">email</label>
         <input type="email" name="email" id="email">
 
         <!-- Elements will create input elements here -->
@@ -24,7 +25,9 @@
         <!-- We'll put the error messages in this element -->
         <div id="card-errors" role="alert"></div>
 
-        <button type="submit">subscribe</button>
+        <div class="form-controls">
+            <button type="submit">subscribe</button>
+        </div>
     </form>
 
     <!-- Add a menu:
