--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,7 @@
     <h1>ssc</h1>
 
     <form id="signup-form">
-        <h2>signup form</h2>
+        <h2>subscribe form</h2>
         <label for="email">email</label>
         <input type="email" name="email" id="email">
 
