--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>ssc</title>
+    <title>ssc checkout</title>
 
     <!-- include the widget -->
     <script type="text/javascript" src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
@@ -14,21 +14,23 @@
 <body>
     <h1>ssc</h1>
 
-    <form id="signup-form">
+    <button id="checkout">Subscribe</button>
+
+    <!-- <form id="signup-form">
         <h2>subscribe form</h2>
         <label for="email">email</label>
-        <input type="email" name="email" id="email">
+        <input type="email" name="email" id="email"> -->
 
         <!-- Elements will create input elements here -->
-        <div id="card-element" class="MyCardElement"></div>
+        <!-- <div id="card-element" class="MyCardElement"></div> -->
 
         <!-- We'll put the error messages in this element -->
-        <div id="card-errors" role="alert"></div>
+        <!-- <div id="card-errors" role="alert"></div> -->
 
-        <div class="form-controls">
+        <!-- <div class="form-controls">
             <button type="submit">subscribe</button>
         </div>
-    </form>
+    </form> -->
 
     <!-- Add a menu:
     Log in / Sign up - when the user is not logged in
