--- a/src/success.html
+++ b/src/success.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ssc success</title>
     <script src="https://js.stripe.com/v3/"></script>
-    <script src="./success.js" defer></script>
+    <script src="/success.js" defer></script>
     <link rel="stylesheet" href="/style.css">
 </head>
 
