--- a/example/index.html
+++ b/example/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <title>ssc demo</title>
+    <script src="https://unpkg.com/webnative@0.26.1/dist/index.umd.min.js"></script>
 </head>
 <body>
     <script src="/bundle.js"></script>
 </body>
 </html>
-
